actualizando el backend y mejorando varios errores